# cls-grav

./: .gitignore  README.md  history.md  pyproject.toml  terminal-history.md  test_class.ipynb
app/: Dockerfile  __init__.py  requirements.txt  views.py
app/src/: database.json  postgres.py  solver.py
app/static/: index.html  main-native.js  main.js  package-lock.json  package.json  sidebar-menu.html  style.css
app/static/pages/: frm-cnfg.html  main.html
app/static/scipts/: authentication.js  frm-cnfg-temp.js  frm-cnfg.js  main.js  menu.js  task-panel.js
app/templates/: index.html
