[tool.poetry]
name = "cls-grav"
version = "0.1.0"
description = ""
authors = ["Kotwice <alex.kotvitsky00@gmail.com>"]
readme = "README.md"
packages = [{include = "cls_grav"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
plotly = "^5.14.1"
scipy = "^1.9.3"
flask = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
